vpc/routes.tf
# Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = merge(
    var.tags, 
    {
      Name = "${var.vpc_name}-igw" 
    }
  )
}

# NAT Gateways (One per AZ if enabled)
resource "aws_eip" "nat" {
  count = var.enable_nat_gateway ? length(var.public_subnets) : 0
  vpc   = true
}

resource "aws_nat_gateway" "nat" {
  count         = var.enable_nat_gateway ? length(var.public_subnets) : 0
  
  allocation_id = aws_eip.nat[count.index].id
  subnet_id     = aws_subnet.public[count.index].id

  tags = merge(var.tags, {
    Name = "${var.vpc_name}-nat-${count.index}"
  })
}

# Public route
resource "aws_route_table" "public"{
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = merge(
    var.tags, 
    {
      Name = "${var.vpc_name}-public-rt"
    }
  )
}

resource "aws_route_table_association" "public" {
  count = length(aws_subnet.public)

  subnet_id = element(aws_subnet.public[*].id,count.index)
  route_table_id = aws_route_table.public.id
}

# Private route
resource "aws_route_table" "private" {
  count = length(var.private_subnets)

  vpc_id = aws_vpc.main.id

  tags= merge(
    var.tags, 
    {
      Name = "${var.vpc_name}-private-rt-${count.index}"
    }
  )
}

resource "aws_route" "private_nat_gateway" {
  count = var.enable_nat_gateway ? length(aws_route_table.private) : 0

  route_table_id         = aws_route_table.private[count.index].id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = element(aws_nat_gateway.this[*].id, count.index)
}

resource "aws_route_table_association" "private" {
  count = length(aws_subnet.private)

  subnet_id = element(aws_subnet.private[*].id,count.index)
  route_table_id = aws_route_table.private[count.index].id
}

# DB RTs (no outbound internet)
resource "aws_route_table" "db" {
  count = length(var.db_subnets)

  vpc_id = aws_vpc.main.id

  tags = merge(
    var.tags, 
    {
    Name = "${var.vpc_name}-db-rt-${count.index}"
    }
  )
}

resource "aws_route_table_association" "db" {
  count          = length(aws_subnet.db)

  subnet_id = element(aws_subnet.db[*].id,count.index)
  route_table_id = aws_route_table.db[count.index].id
}
